# dex

./: .dockerignore  .gitignore  Dockerfile  README.md  START_HERE.bat  build_exe.bat  config.py  launch.bat  main.py  pyproject.toml  requirements.txt  run_exe.py
core/: app_launcher.py  assistant.py  async_engine.py  base_llm_module.py  command.py  diagnostics.py  llm.py  model_cache.py  model_evaluator.py  model_router.py  permissions.py  personality.py  personality_auditor.py  planner.py  plugin_system.py  predictor.py  sandbox.py  tiered_inference.py  voice.py  voice_clone.py  wake_word.py
counsel/: counterfactual.py  devils_advocate.py  scenario_branch.py
dexos/: contextual_desktop.py  search_engine.py  voice_layer.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  INVARIANTS.md  THREAT_MODEL.md
ethics/: bias_detector.py  co_processor.py
evolution/: genetic_search.py  hot_swapper.py  meta_architect.py
generative/: jit_compiler.py  self_expander.py
integrations/: calendar_client.py  email_client.py  home_assistant.py  matrix_client.py  wearable.py
intent/: mental_fuse.py  pre_speech.py  symbiotic_input.py
learning/: ab_testing.py  backup.py  constitution.py  digital_twin.py  federated.py  feedback.py  lora.py  meta_learner.py  research.py  rule_engine.py  self_heal.py
memory/: encryptor.py  rag.py  validator.py  vector_store.py
mesh/: agent_swarm.py  fault_tolerant_core.py  privacy_controller.py
multiagent/: agent_template.py  debate.py  kill_switch.py  orchestrator.py  sandbox.py  version_control.py
prime/: consciousness_continuum.py  delegation.py  (+1 more)
(+51 files in other folders)
